--- a/resources/ComPressure-macOS-AUv3-Info.plist
+++ b/resources/ComPressure-macOS-AUv3-Info.plist
@@ -7,9 +7,9 @@
 	<key>CFBundleExecutable</key>
 	<string>ComPressure</string>
 	<key>CFBundleGetInfoString</key>
-	<string>ComPressure v1.0.0 Copyright 2022 pelennor@gmail.com</string>
+	<string>ComPressure v1.0.0 Copyright 2022 pelennor DSP</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.pelennor.app.ComPressure.AUv3</string>
+	<string>com.pelennorDSP.app.ComPressure.AUv3</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -36,7 +36,7 @@
 					<key>manufacturer</key>
 					<string>Acme</string>
 					<key>name</key>
-					<string>pelennor: ComPressure</string>
+					<string>pelennorDSP: ComPressure</string>
 					<key>sandboxSafe</key>
 					<true/>
 					<key>subtype</key>
